--- a/index.html
+++ b/index.html
@@ -5,59 +5,47 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
   <script src="https://cdn.jsdelivr.net/npm/colorthief@2.3.2/dist/color-thief.umd.js"></script>
   <style>
-    /* 1. 彻底解决外部滚动条：强制隐藏 body 溢出 */
-    html, body { 
-      margin: 0; 
-      padding: 0; 
-      overflow: hidden; /* 核心：禁止出现右侧手动滚动条 */
-      background: transparent; 
-      height: 100%;
-    }
+    body { margin: 15px; background: transparent; } /* 留点边距方便显示阴影 */
 
-    /* 2. 还原原版直角 & 高级感微阴影 */
+    /* 1. ✅ 浮起效果 (Shadow) + 直角 */
     .aplayer {
-      margin: 2px 10px 10px 2px !important; /* 给右侧和底部阴影留出显示空间 */
-      border-radius: 0 !important; /* 彻底直角 */
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1) !important; /* 像素级对齐原版微弱阴影 */
-      border: 1px solid #eee !important;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+      border-radius: 0 !important;
+      border: none !important; /* 既然要浮起，就去掉边框，改用阴影 */
+      box-shadow: 0 10px 30px -10px rgba(0,0,0,0.2) !important; /* 核心：悬浮感阴影 */
+      transition: all 0.3s ease;
     }
 
-    /* 3. 解决线的问题：对齐原版列表边框 */
-    .aplayer .aplayer-list ol li {
-      border-top: 1px solid #f0f0f0 !important; /* 线条调淡 */
-    }
-    .aplayer .aplayer-list ol li:first-child {
-      border-top: none !important; /* 第一项上方不留线 */
-    }
-    .aplayer .aplayer-list ol li:last-child {
-      border-bottom: none !important; /* 彻底消除最后一项的底线 */
-    }
+    /* 2. ✅ 彻底干掉右侧手动滚动条 */
     .aplayer .aplayer-list {
-      border-bottom: none !important; /* 消除容器底边 */
-    }
-
-    /* 4. 隐藏播放列表内部滚动条 */
-    .aplayer .aplayer-list {
-      max-height: 100px !important; /* 锁定约 3 首歌高度 */
+      max-height: 100px !important; 
       overflow-y: auto !important;
       scrollbar-width: none !important; /* Firefox */
-      -ms-overflow-style: none !important; /* IE/Edge */
+      -ms-overflow-style: none !important; /* IE */
     }
     .aplayer .aplayer-list::-webkit-scrollbar {
       display: none !important; /* Chrome/Safari */
       width: 0 !important;
+      height: 0 !important;
     }
 
-    /* 5. 正在播放行的灰色背景（对齐原版 #f7f7f7） */
+    /* 3. ✅ 去掉最后一首歌下面的横线 */
+    .aplayer .aplayer-list ol li {
+      border-top: 1px solid #f5f5f5 !important; /* 统一上面的线 */
+    }
+    .aplayer .aplayer-list ol li:first-child {
+      border-top: none !important; /* 第一首歌上面不需要线 */
+    }
+    .aplayer .aplayer-list ol li:last-child {
+      border-bottom: none !important; /* 彻底去掉最后一首歌的底线 */
+    }
+
+    /* 4. 激活行颜色 */
     .aplayer .aplayer-list ol li.aplayer-list-light {
-      background: #f7f7f7 !important;
+      background: #f0f0f0 !important;
     }
     
-    /* 列表左侧激活状态的细条 */
     .aplayer .aplayer-list ol li .aplayer-list-cur {
       width: 2px !important;
-      background: #444 !important; /* 调暗一点更有高级感 */
     }
   </style>
 </head>
@@ -85,7 +73,8 @@
       theme: '#e9e9e9'
     });
 
-    // 自动滚动修正
+    /* 变色龙 & 自动滚动 */
+    const colorThief = new ColorThief();
     ap.on('listswitch', () => {
       setTimeout(() => {
         const activeItem = document.querySelector('.aplayer-list-light');
@@ -93,26 +82,22 @@
           activeItem.scrollIntoView({ behavior: 'smooth', block: 'nearest' });
         }
       }, 100);
-      updateThemeSafe();
+      updateTheme();
     });
 
-    // 变色龙逻辑
-    const colorThief = new ColorThief();
-    function updateThemeSafe() {
+    function updateTheme() {
       const index = ap.list.index;
       const imgUrl = audioList[index]?.cover;
       if (!imgUrl) return;
-
       const img = new Image();
       img.crossOrigin = 'Anonymous';
       img.onload = () => {
         const c = colorThief.getColor(img);
         ap.theme(`rgb(${c[0]}, ${c[1]}, ${c[2]})`, index);
       };
-      img.src = imgUrl + (imgUrl.includes('?') ? '&' : '?') + 'cb=' + Date.now();
+      img.src = imgUrl + '?' + Date.now();
     }
-
-    window.addEventListener('load', () => setTimeout(updateThemeSafe, 300));
+    window.addEventListener('load', () => setTimeout(updateTheme, 300));
   </script>
 </body>
 </html>
