--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       background: transparent;
     }
 
-    /* 1) ✅ 阴影：更接近原版（有存在感但不浮夸） */
+    /* 1) ✅ 阴影：把上一版强度压到 30%（更接近原版、更克制） */
     .aplayer {
       border-radius: 0 !important;
       border: none !important;
       box-shadow:
-        0 0 0 1px rgba(0,0,0,0.06),     /* 轻微边缘层次（像原版的“框感”） */
-        0 8px 22px rgba(0,0,0,0.10) !important; /* 轻柔扩散（不会飘） */
+        0 0 0 1px rgba(0,0,0,0.02),     /* 原 0.06 -> 0.02 */
+        0 8px 22px rgba(0,0,0,0.03) !important; /* 原 0.10 -> 0.03 */
       transition: box-shadow 0.25s ease;
       --zinnia-theme: #e9e9e9;
-      background: #fff; /* 保险：防止透明导致阴影观感怪 */
+      background: #fff;
     }
 
     /* 2) ✅ 列表区域：保持高度与滚动 */
@@ -53,24 +53,23 @@
       display: none !important;
     }
 
-    /* 4) ✅ 分割线：不用 border（避免之前的“多余线/跑位”）
-       - 给每个 li 用背景渐变画底部 1px 线
-       - 最后一项关闭
+    /* 4) ✅ 分割线：不要“底线”，改成“下一首的顶线”
+       - 每个 li 默认无边框
+       - 从第2首开始加 top 线
+       - 这样最后一首下面永远干净（因为没有 bottom）
     */
     .aplayer .aplayer-list ol li {
       border: none !important;
-      background-image: linear-gradient(to bottom, transparent calc(100% - 1px), #f5f5f5 0) !important;
-      background-size: 100% 100% !important;
-      background-repeat: no-repeat !important;
-      background-position: 0 0 !important;
-    }
-    .aplayer .aplayer-list ol li:last-child {
       background-image: none !important;
+      background-color: transparent;
+    }
+    .aplayer .aplayer-list ol li + li {
+      border-top: 1px solid #e6e6e6 !important;
     }
 
     /* 5) ✅ 当前播放行底色（保留） */
     .aplayer .aplayer-list ol li.aplayer-list-light {
-      background-color: #f0f0f0 !important;
+      background: #f0f0f0 !important;
     }
 
     /* 6) ✅ 左侧小竖条：跟随变色龙 */
