--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
       background: transparent;
     }
 
-    /* 1️⃣ 播放器样式 */
+    /* 1️⃣ 播放器样式 - 已去掉阴影 */
     .aplayer {
       border-radius: 0 !important;
       border: none !important;
       background: #fff;
-      box-shadow:
-        0 0 0 1px rgba(0,0,0,0.03),
-        0 6px 16px rgba(0,0,0,0.06) !important;
-      transition: box-shadow 0.25s ease;
+      /* 去掉阴影 */
+      box-shadow: none !important; 
       --zinnia-theme: #e9e9e9;
     }
 
@@ -34,7 +32,6 @@
       margin: 0 !important;
       padding: 0 !important;
       border: none !important;
-      /* 启用平滑滚动，但不影响外部页面 */
       scroll-behavior: smooth; 
     }
 
@@ -127,15 +124,13 @@
       }, 60);
     }
 
-    // ✨ 修复后的滚动逻辑：仅在内部容器滚动，绝不触发外部页面跳转
+    // 内部局部滚动逻辑，不触发外部页面跳转
     ap.on('listswitch', () => {
       setTimeout(() => {
         const listContainer = document.querySelector('.aplayer-list ol');
         const activeItem = document.querySelector('.aplayer-list-light');
         if (listContainer && activeItem) {
-          // 计算当前曲目相对于列表顶部的偏移量
           const targetScroll = activeItem.offsetTop;
-          // 直接设置内部容器的滚动位置，这种方法绝不会影响外层 Notion 页面
           listContainer.scrollTop = targetScroll;
         }
       }, 100);
