--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
       background: transparent;
     }
 
-    /* 1️⃣ 播放器样式 - 已去掉阴影 */
+    /* 1️⃣ 播放器样式 - 找回边框，保持无阴影 */
     .aplayer {
-      border-radius: 0 !important;
-      border: none !important;
+      border-radius: 4px !important; /* 加了一点点圆角，配合边框更好看 */
+      border: 1px solid #e0e0e0 !important; /* 浅灰色细边框 */
       background: #fff;
-      /* 去掉阴影 */
       box-shadow: none !important; 
       --zinnia-theme: #e9e9e9;
     }
@@ -50,10 +49,14 @@
       display: none !important;
     }
 
-    /* 4️⃣ 分隔线样式 */
+    /* 4️⃣ 列表行高度微调 - 调矮一点点 */
     .aplayer .aplayer-list ol li {
       border: none !important;
       background-image: none !important;
+      height: 28px !important;   /* 标准是32px，这里调矮到28px */
+      line-height: 28px !important;
+      padding: 0 15px !important;
+      font-size: 12px !important; /* 配合高度稍微减小一点点字号 */
     }
 
     /* 5️⃣ 当前播放行高亮 */
@@ -64,7 +67,15 @@
     /* 6️⃣ 左侧小竖条 */
     .aplayer .aplayer-list ol li .aplayer-list-cur {
       width: 2px !important;
+      height: 20px !important; /* 随行高缩短一点点 */
+      top: 4px !important;
       background: var(--zinnia-theme) !important;
+    }
+    
+    /* 修正播放列表里的文字对齐 */
+    .aplayer .aplayer-list ol li .aplayer-list-title,
+    .aplayer .aplayer-list ol li .aplayer-list-author {
+      line-height: 28px !important;
     }
   </style>
 </head>
@@ -124,7 +135,6 @@
       }, 60);
     }
 
-    // 内部局部滚动逻辑，不触发外部页面跳转
     ap.on('listswitch', () => {
       setTimeout(() => {
         const listContainer = document.querySelector('.aplayer-list ol');
