--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
       background: transparent;
     }
 
-    /* 1️⃣ 播放器样式 - 无边框、无阴影 */
+    /* 1️⃣ 播放器样式 - 彻底去边框、去阴影 */
     .aplayer {
-      border-radius: 0 !important;
       border: none !important;
+      box-shadow: none !important;
       background: #fff;
-      box-shadow: none !important; 
+      border-radius: 0 !important;
       --zinnia-theme: #e9e9e9;
+    }
+
+    /* 强制去掉内部所有分割线 */
+    .aplayer .aplayer-info,
+    .aplayer .aplayer-list,
+    .aplayer .aplayer-list ol li {
+      border: none !important;
     }
 
     /* 2️⃣ 列表高度与滚动逻辑 */
@@ -49,16 +56,13 @@
       display: none !important;
     }
 
-    /* 4️⃣ 列表行高度调至 21px */
+    /* 4️⃣ 列表行高度调回 28px */
     .aplayer .aplayer-list ol li {
-      border: none !important;
       background-image: none !important;
-      height: 21px !important;   /* 用户指定高度 */
-      line-height: 21px !important;
-      padding: 0 12px !important;
-      font-size: 11px !important; /* 高度极低，字号相应调小 */
-      display: flex;
-      align-items: center;
+      height: 28px !important;   
+      line-height: 28px !important;
+      padding: 0 15px !important;
+      font-size: 12px !important;
     }
 
     /* 5️⃣ 当前播放行高亮 */
@@ -66,24 +70,19 @@
       background: #f0f0f0 !important;
     }
 
-    /* 6️⃣ 左侧小竖条 - 随 21px 行高进行微调 */
+    /* 6️⃣ 左侧小竖条 - 适配 28px */
     .aplayer .aplayer-list ol li .aplayer-list-cur {
       width: 2px !important;
-      height: 14px !important; 
-      top: 3.5px !important;
+      height: 20px !important; 
+      top: 4px !important;
       background: var(--zinnia-theme) !important;
     }
     
-    /* 修正播放列表里的文字容器高度 */
+    /* 修正文字排版 */
     .aplayer .aplayer-list ol li .aplayer-list-title,
-    .aplayer .aplayer-list ol li .aplayer-list-author,
-    .aplayer .aplayer-list ol li .aplayer-list-index {
-      line-height: 21px !important;
-      height: 21px !important;
-    }
-
     .aplayer .aplayer-list ol li .aplayer-list-author {
-      margin-left: 8px;
+      line-height: 28px !important;
+      height: 28px !important;
     }
   </style>
 </head>
@@ -143,7 +142,6 @@
       }, 60);
     }
 
-    // 内部局部滚动逻辑，不触发外部页面跳转
     ap.on('listswitch', () => {
       setTimeout(() => {
         const listContainer = document.querySelector('.aplayer-list ol');
