--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
       display: none !important;
     }
 
-    /* 4️⃣ 列表行高度 26px，字号 12px */
+    /* 4️⃣ 列表行高度 26px 修复版 */
     .aplayer .aplayer-list ol li {
       background-image: none !important;
       height: 26px !important;   
       line-height: 26px !important;
       padding: 0 15px !important;
-      font-size: 12px !important; 
-      display: flex;
-      align-items: center;
+      font-size: 12px !important;
+      border: none !important;
+      display: block !important; /* 恢复为 block 确保内容不消失 */
     }
 
     /* 5️⃣ 当前播放行高亮 */
@@ -80,16 +80,27 @@
       background: var(--zinnia-theme) !important;
     }
     
-    /* 文字垂直对齐优化 */
-    .aplayer .aplayer-list ol li .aplayer-list-title,
-    .aplayer .aplayer-list ol li .aplayer-list-author,
-    .aplayer .aplayer-list ol li .aplayer-list-index {
+    /* 修正播放列表里的文字显示 */
+    .aplayer .aplayer-list ol li span {
       line-height: 26px !important;
       height: 26px !important;
+      display: inline-block !important; /* 确保文字是行内块级元素 */
     }
+    
+    .aplayer .aplayer-list ol li .aplayer-list-title {
+      font-weight: 400 !important;
+      color: #333 !important;
+    }
+
     .aplayer .aplayer-list ol li .aplayer-list-author {
       margin-left: 10px;
       opacity: 0.5;
+      font-size: 11px !important;
+    }
+
+    .aplayer .aplayer-list ol li .aplayer-list-index {
+      margin-right: 10px;
+      color: #999;
     }
   </style>
 </head>
@@ -112,7 +123,7 @@
     const ap = new APlayer({
       container: document.getElementById('aplayer'),
       listFolded: false,
-      listMaxHeight: '78px', // 适配 3 首 * 26px
+      listMaxHeight: '78px', 
       audio: audioList,
       theme: '#e9e9e9'
     });
