--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       background: transparent;
     }
 
-    /* 1️⃣ 播放器样式 - 彻底去边框、去阴影 */
+    /* 1️⃣ 基础样式：无边框、无阴影 */
     .aplayer {
       border: none !important;
       box-shadow: none !important;
@@ -19,14 +19,14 @@
       --zinnia-theme: #e9e9e9;
     }
 
-    /* 彻底去掉内部所有分割线和边框 */
+    /* 彻底清除内部线条 */
     .aplayer .aplayer-info,
     .aplayer .aplayer-list,
     .aplayer .aplayer-list ol li {
       border: none !important;
     }
 
-    /* 2️⃣ 列表高度与滚动逻辑 - 精准适配 3 首歌 (26px * 3 = 78px) */
+    /* 2️⃣ 列表容器：精准 3 首歌高度 (26px * 3 = 78px) */
     .aplayer .aplayer-list {
       max-height: 78px !important;
       overflow: hidden !important;
@@ -37,70 +37,59 @@
       overflow-y: auto !important;
       margin: 0 !important;
       padding: 0 !important;
-      border: none !important;
       scroll-behavior: smooth; 
     }
 
-    /* 3️⃣ 彻底隐藏滚动条 */
-    .aplayer .aplayer-list,
-    .aplayer .aplayer-list ol,
-    .aplayer .aplayer-list * {
-      scrollbar-width: none !important;
-      -ms-overflow-style: none !important;
-    }
-    .aplayer .aplayer-list::-webkit-scrollbar,
-    .aplayer .aplayer-list ol::-webkit-scrollbar,
-    .aplayer .aplayer-list *::-webkit-scrollbar {
-      width: 0 !important;
-      height: 0 !important;
+    /* 隐藏滚动条 */
+    .aplayer .aplayer-list ol::-webkit-scrollbar {
       display: none !important;
     }
 
-    /* 4️⃣ 列表行高度 26px 修复版 */
+    /* 3️⃣ 列表行样式 (26px) */
     .aplayer .aplayer-list ol li {
       background-image: none !important;
       height: 26px !important;   
       line-height: 26px !important;
       padding: 0 15px !important;
       font-size: 12px !important;
-      border: none !important;
-      display: block !important; /* 恢复为 block 确保内容不消失 */
+      display: flex !important; /* 修正对齐 */
+      align-items: center !important;
     }
 
-    /* 5️⃣ 当前播放行高亮 */
+    /* 4️⃣ 颜色统一优化 */
+    .aplayer .aplayer-list ol li .aplayer-list-title {
+      color: #333 !important; /* 歌名深灰 */
+      font-weight: 400 !important;
+    }
+
+    .aplayer .aplayer-list ol li .aplayer-list-author {
+      color: #555 !important; /* 歌手颜色调深，接近歌名 */
+      margin-left: 12px !important;
+      font-size: 11px !important;
+    }
+
+    /* 当前播放行背景 */
     .aplayer .aplayer-list ol li.aplayer-list-light {
-      background: #f0f0f0 !important;
+      background: #f4f4f4 !important;
     }
 
-    /* 6️⃣ 左侧小竖条 - 适配 26px */
+    /* 5️⃣ 修正小竖条：默认隐藏，只在当前播放行显示 */
     .aplayer .aplayer-list ol li .aplayer-list-cur {
+      display: none !important; /* 全局隐藏 */
+    }
+
+    .aplayer .aplayer-list ol li.aplayer-list-light .aplayer-list-cur {
+      display: block !important; /* 仅高亮行显示 */
       width: 2px !important;
       height: 16px !important; 
       top: 5px !important;
       background: var(--zinnia-theme) !important;
     }
     
-    /* 修正播放列表里的文字显示 */
-    .aplayer .aplayer-list ol li span {
-      line-height: 26px !important;
-      height: 26px !important;
-      display: inline-block !important; /* 确保文字是行内块级元素 */
-    }
-    
-    .aplayer .aplayer-list ol li .aplayer-list-title {
-      font-weight: 400 !important;
-      color: #333 !important;
-    }
-
-    .aplayer .aplayer-list ol li .aplayer-list-author {
-      margin-left: 10px;
-      opacity: 0.5;
-      font-size: 11px !important;
-    }
-
+    /* 修正序号位置 */
     .aplayer .aplayer-list ol li .aplayer-list-index {
-      margin-right: 10px;
       color: #999;
+      margin-right: 12px;
     }
   </style>
 </head>
@@ -132,7 +121,7 @@
     let themeTimer = null;
 
     function getActiveIndex() {
-      const active = document.querySelector('.aplayer .aplayer-list li.aplayer-list-light');
+      const active = document.querySelector('.aplayer-list-light');
       if (!active) return ap.list.index;
       const di = active.getAttribute('data-index');
       return (di !== null && di !== '') ? Number(di) : ap.list.index;
